--- a/app/src/main/res/layout-w900dp/fragment_add_part_one.xml
+++ b/app/src/main/res/layout-w900dp/fragment_add_part_one.xml
@@ -9,7 +9,7 @@
     tools:context=".ui.addoredit.fragment.partone.AOEPartOneFragment"
     android:background="@drawable/background_style">
 
-    <Switch
+    <androidx.appcompat.widget.SwitchCompat
         android:id="@+id/sw_one_sale"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
